# semantic_mapping_and_manipulation

./: .gitmodules  CMakeLists.txt  README  README.md  README.md~  package.xml
launch/: clustering.launch  gaze_selection.launch  grasp_selection.launch  grasp_selection.launch~  image_proc.launch~  lsd_slam.launch  lsd_slam.launch~  my_bot_sem_map.launch~  mybot_sem_map.launch  select_object_grasp.launch  select_object_grasp.launch~  sem_map.launch~  teleop.launch  test_collision_object.launch  test_collision_object.launch~  test_rviz.launch
msg/: BoundingBox_data.msg  BoundingBox_data.msg~  LabelledPointCloud2.msg  LabelledPointCloud2.msg~  PanTilt.msg  label.msg~  labelled_image.msg  labelled_image.msg~
mybot/: mybot_display.launch  mybot_display.launch~
mybot/1_perception/mybot_2dnav/: CMakeLists.txt  package.xml
mybot/1_perception/mybot_2dnav/config/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.xml  move_base_params.yaml  my_laser_config.yaml  navi-setting.rviz  slam_gmapping.xml
mybot/1_perception/mybot_2dnav/launch/: amcl.launch  mybot_2dnav.launch  mybot_2dnav_gazebo.launch
mybot/1_perception/rgbd_streamer/: CMakeLists.txt  package.xml
mybot/1_perception/rgbd_streamer/launcher/: openni2.launch  receiver.launch~  receiver_siambot.launch  receiver_webots.launch  sender.launch
mybot/1_perception/rgbd_streamer/src/: receiver.cpp  remove_background.cpp  sender.cpp  server.cpp  server.hpp
mybot/1_perception/simple_recognition/: CMakeLists.txt  CMakeLists.txt~  package.xml
mybot/1_perception/simple_recognition/Lua/: 0_parameter.lua  1_data.lua  2_model.lua  3_train.lua  4_loadModel.lua  5_test.lua  5_test_if.lua
mybot/1_perception/simple_recognition/launch/: accumulate.launch  calibThermal.launch  demonstration_human.launch  demonstration_robot.launch  learning.launch  plane_normal.launch  recognition.launch
mybot/1_perception/simple_recognition/manual/: PCL.txt  thermal_sensor.txt
mybot/1_perception/simple_recognition/msg/: RecogObject.msg  RecogObjectArray.msg  event.msg
mybot/1_perception/simple_recognition/setup/: RGBDT_transmat.xml
mybot/1_perception/simple_recognition/src/: Color.cpp  Color.hpp  Core.hpp  Object.hpp  Thermal.hpp  accumulate.cpp  calibThermal.cpp  category.cpp  cbf.h  contact.hpp  demonstration_human.cpp  demonstration_robot.cpp  learning.cpp  plane_normal.cpp  recognition.cpp
mybot/1_perception/simple_recognition/webots/: color_for_toy.txt
mybot/1_perception/simple_recognition_old/: CMakeLists.txt  CMakeLists.txt~  package.xml
mybot/1_perception/simple_recognition_old/Lua/: 0_parameter.lua  1_data.lua  1_data.lua~  2_model.lua  2_model.lua~  3_train.lua  3_train.lua~  4_loadModel.lua  4_loadModel.lua~  5_test.lua  5_test.lua~  5_test_if.lua
mybot/1_perception/simple_recognition_old/RNN/: load.lua  test.lua  train.lua
mybot/1_perception/simple_recognition_old/launch/: accumulate_old.launch  calibThermal_old.launch  demonstration_human.launch  demonstration_robot.launch  learning_old.launch  (+2 more)
mybot/3_reasoning/decision_maker/: CMakeLists.txt  package.xml
mybot/3_reasoning/gaze_selection/: CMakeLists.txt  package.xml
mybot/4_execution/: arm_move~
mybot/4_execution/behavior/: CMakeLists.txt  package.xml
mybot/4_execution/moveit_core/: CMakeLists.txt  getLinkModel  package.xml
mybot/4_execution/mybot_control/: CMakeLists.txt  package.xml
mybot/4_execution/mybot_controllers/: CMakeLists.txt  package.xml
mybot/4_execution/mybot_controllers/test/: CMakeLists.txt  test_packet.cpp  test_sync.cpp
mybot/4_execution/mybot_description/: model.config  package.xml
mybot/4_execution/mybot_generated/: .setup_assistant  CMakeLists.txt  package.xml
mybot/4_execution/mybot_gripper_action_controller/: CMakeLists.txt  package.xml  ros_control_plugins.xml
mybot/4_execution/mybot_joint_trajectory_controller/: CMakeLists.txt  package.xml  ros_control_plugins.xml
mybot/4_execution/odroid_launch/: CMakeLists.txt  package.xml
mybot/4_execution/omni_drive_controller/: CMakeLists.txt  CMakeLists.txt~  omni_drive_controller_plugins.xml  package.xml
mybot/4_execution/simple_navigation/: CMakeLists.txt  package.xml
mybot/install_scripts/: calibration.sh  cob_people_detection.sh  cob_people_detection.sh~  essential.sh  essential.sh~  ff_planner.sh  hark_sound_localization.sh  marker.sh  pmm_art.sh  sound_localization.sh  text_to_speech.sh  torch7.sh  wordnet.sh  wordnet.sh~
mybot/map/: my_map.pgm  my_map.yaml  mymap2.pgm  mymap2.yaml
rviz/: CNN_clust.rviz  CNN_clust.rviz~  lsd_slam.rviz  my_bot_sem_map.rviz  my_bot_sem_map.rviz~  sem_map.rviz  test_BB.rviz
rviz/urdf/: asus_camera.urdf  asus_camera.urdf.xacro~  asus_camera.urdf~  asus_camera.xacro~  asus_camera_robot.urdf.xacro
src/: BB_for_reg_pcl.cpp  BB_for_reg_pcl.cpp~  ICP_registration.cpp  ICP_registration.cpp~  class_labpcl_seg.cpp~  convert_grasp_to_pose.py  convert_grasp_to_pose.py~  fcn_launcher.py  grasp_pose.cpp~  mask_data_2_labpcl.cpp  mask_data_2_labpcl.cpp~  move_arm_to_grasp.cpp  move_arm_to_grasp.cpp~  move_arm_to_handle.cpp~  select_object_to_grasp.cpp  select_object_to_grasp.cpp~  test_gripper.cpp~
src/maybe_useful/: class_labpcl_seg.cpp  class_pcl_seg.cpp  crop_2_pcl.cpp  crop_img_depth.cpp  cylindrical_segm.cpp  mask_data_2_pcl.cpp  mask_pcl_segm.cpp  move_arm_backup.py  move_arm_to_grasp.cpp  move_arm_to_grasp.cpp~  move_arm_to_grasp_object.py  region_growth.cpp  test_gripper.cpp
src/nothing/: my_eucl.cpp~  rgb_region_growth.cpp
src/seg_algorithms/: class_handle_seg.cpp~  class_labpcl_seg_all.cpp  class_labpcl_seg_all.cpp~  class_labpcl_seg_cylin.cpp~  class_labpcl_seg_cylinder.cpp  class_labpcl_seg_cylinder.cpp~  class_labpcl_seg_h.cpp  class_labpcl_seg_h.cpp~  class_labpcl_seg_nothing.cpp  class_labpcl_seg_nothing.cpp~  class_labpcl_seg_outlier.cpp  class_labpcl_seg_region.cpp  class_labpcl_seg_region.cpp~  class_labpcl_seg_sphere.cpp  class_labpcl_seg_sphere.cpp~  class_labpcl_seg_v.cpp  class_labpcl_seg_v.cpp~  test.cpp
(+259 files in other folders)
